# beril-atlas-skill

./: .commit-message-v0.3.10.txt  .commit-message-v0.3.11.txt  .commit-message-v0.3.12.txt  .commit-message-v0.3.13.txt  .commit-message-v0.3.14.txt  .commit-message-v0.3.6.txt  .commit-message-v0.3.7.txt  .commit-message-v0.3.8.txt  .commit-message-v0.3.9.txt  .gitattributes  .gitignore  CHANGELOG.md  CONFIGURE.md  CONTRIBUTION.md  LAYOUT.md  PLUGIN_GUIDE.md  PLUGIN_GUIDE_SKELETON.md  README.md  TUTORIAL.md  pyproject.toml
src/beril_atlas/: __init__.py  cli.py  discovery.py  llm_config.py
src/beril_atlas/commands/: __init__.py  _env_compose.py  config_status.py  configure.py  install_skill.py  mark_configured.py  metrics.py  render.py  scan.py  smoke_test.py  template_env.py
src/beril_atlas/engine/: __init__.py  authors.py  chunking.py  contamination.py  drift.py  extraction_cache.py  llm_client.py  llm_config.py  metrics.py  metrics_runner.py  notebooks.py  posthoc_classifiers.py  projects.py  references.py  render.py  research_lines.py  revisions.py  scan.py  sections.py  sophistication.py  vocab.py  warehouse.py
src/beril_atlas/engine/extractors/: __init__.py  universal.py
src/beril_atlas/skill/: SKILL.md
src/beril_atlas/skill/commands/: beril-atlas-configure.md  beril-atlas-update.md
src/beril_atlas/skill/references/: dashboard-mockup.html  design-note.md  phase-0-findings.md  what-we-capture.md
src/beril_atlas/skill/vocab-shipped/: _match_rules.v1.yaml  databases.v1.yaml  functions.v1.yaml  journals.v1.yaml  organisms.v1.yaml
src/beril_atlas/skills/beril-atlas/: SKILL.md
src/beril_atlas/skills/beril-atlas-configure/: SKILL.md
src/beril_atlas/skills/beril-atlas-update/: SKILL.md
src/beril_atlas/skills/beril-atlas/prompts/: extract_universal.v1.md
src/beril_atlas/skills/beril-atlas/references/: dashboard-caveats.md  drift-review-template.md  sophistication-score-proposal.md  sync-protocol.md  vocab-reference.md
src/beril_atlas/skills/beril-atlas/vocab-shipped/: methods.v1.yaml  organisms.v1.yaml  question-types.v1.yaml
tests/integration/: conftest.py  test_authors.py  test_contamination.py  test_drift.py  test_end_to_end.py  test_extractors.py  test_llm.py  test_metrics.py  test_notebooks.py  test_posthoc_classifiers.py  test_projects.py  test_references.py  test_research_lines.py  test_revisions.py  test_sections.py  test_sophistication.py  test_vocab.py  test_warehouse_idempotency.py
tests/unit/: test_config_status.py  test_configure_parser.py  test_discovery.py  test_env_compose_additive_only.py  test_extractor_null_handling.py  test_llm_config_canonical.py  test_smoke_test.py  test_v0110_fixes.py  test_v0111_fixes.py  test_v0112_fixes.py  test_v018_fixes.py  test_v019_fixes.py  test_v02_entity_drawers.py  test_v030_tabs.py  test_v0310_database_matrix.py  test_v0311_sidebar_nav.py  test_v0314_mark_configured_idempotent.py  test_v032_data_panels.py  test_v038_cache_resolution.py  test_v039_chunking.py
